clusterip-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-canary
  namespace: avalara-tests
spec:
  selector:
    name: blue-pod
  ports:
  - port: 2409
    targetPort: 8080
