ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  namespace: avalara-tests
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: avalara.project.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: green-primary
            port:
              number: 2409

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  namespace: avalara-tests
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: nginx
  rules:
  - host: avalara.project.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blue-canary
            port:
              number: 2409
